fixed alignment and added authorship

--- a/styles/main.css
+++ b/styles/main.css
@@ -229,7 +229,7 @@ a{
     color: #ea8462;
 }
 .my-item{
-     font-family: 'Libre Baskerville', serif;    
+     font-family: 'Libre Baskerville', serif;
     font-size: 18px;
     margin-bottom: 20px;
 }
@@ -247,4 +247,7 @@ a{
 }
 img{
     max-width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
